Add text about barline shifts in Autumn Leaves.

--- a/diss.bib
+++ b/diss.bib
@@ -45,6 +45,15 @@ Theory} }
   year        = {2011}
 }
 
+@book{baker:1985,
+  author      = {Baker, David},
+  title       = {How to Play Bebop, Vol. 1},
+  subtitle    = {The Bebop Scales and Other Scales in Common Use},
+  address     = {Van Nuys, CA},
+  publisher   = {Alfred},
+  year        = {1985}
+}
+
 @book{baker:tunes,
   author      = {Baker, David},
   title       = {How to Learn Tunes},
@@ -333,6 +342,19 @@ Theory} }
   number      = {2},
   pages       = {241--63},
   year        = {1998}
+}
+
+@incollection{folio:1995,
+  author      = {Folio, Cynthia},
+  editor      = {Marvin, Elizabeth West and Hermann, Richard},
+  booktitle   = {Concert Music, Rock, and Jazz since 1945: Essays and
+                Analytical Studies},
+  title       = {{An Analysis of Polyrhythm in Selected Improvised Jazz
+                Solos}},
+  address     = {Rochester, NY},
+  publisher   = {University of Rochester Press},
+  pages       = {103--35},
+  year        = {1995}
 }
 
 @book{forte:1995,
@@ -666,6 +688,19 @@ Theory} }
   volume      = {23},
   pages       = {155--69},
   year        = {2009}
+}
+
+@article{love:2013,
+  author      = {Love, Stefan},
+  title       = {Subliminal Dissonance or \mkbibquote{Consonance}: Two Views
+                of Jazz Meter},
+  shorttitle  = {Two Views of Jazz Meter},
+  journal     = {Music Theory Spectrum},
+  volume      = {35},
+  number      = {1},
+  pages       = {48--61},
+  year        = {2013},
+  issue       = {Spring}
 }
 
 @phdthesis{martin:1980,
@@ -1058,6 +1093,17 @@ Theory} }
   number      = {1},
   pages       = {1--52},
   year        = {2012}
+}
+
+@unpublished{voglewede:2013,
+  author      = {Voglewede, Matthew},
+  title       = {Metrically Dissonant Layers of Swing: Double Time in Two of
+                Louis Armstrong's Performances of \mkbibquote{Lazy River}},
+  address     = {Philadelphia, PA},
+  month       = mar,
+  year        = {2013},
+  note        = {paper presented at the annual meeting of the Music Theory
+                Society of the Mid-Atlantic}
 }
 
 @article{waters:2005,
