--- a/footnotes/ch4-notes.tex
+++ b/footnotes/ch4-notes.tex
@@ -338,6 +338,27 @@
   scale for chords. Since there is no B (flat or natural) in any of the third
   bars of Figure \ref{csa:kirk-tfo-progs}, we thus assume F Lydian.}
 
+\fntext{csa-12}{%
+  The kind of metrical shifts discussed here are much simpler than those
+  usually discussed in the jazz literature. The classic work on metrical
+  dissonance in jazz is \cite{folio:1995}; Stefan Love provides an overview of
+  other literature in this area in \headlesscite{love:2013}.}
+
+\fntext{csa-13}{%
+  In ``double-time'' passages, the soloist plays twice the speed of the
+  prevailing note value, though the underlying tempo remains constant. Here
+  there is a quarter-note pulse, and the soloists play predominantly eighth
+  notes; the double-time passages use sixteenth notes instead. Matthew
+  Voglewede has discussed the practice of double-time from a metrical standpoint
+  in \headlesscite{voglewede:2013}.}
+
+\fntext{csa-14}{%
+  The dominant bebop scale is a diatonic scale with a chromatic note added
+  between the chord seventh and the root, so that when played in eighth notes
+  the chord tones fall on the beat. David Baker (who played with George
+  Russell early in his career) is usually credited with inventing the
+  term; see \headlesscite{baker:1985}.}
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../diss"
