--- a/footnotes/ch4-notes.tex
+++ b/footnotes/ch4-notes.tex
@@ -353,11 +353,16 @@
   in \headlesscite{voglewede:2013}.}
 
 \fntext{csa-14}{%
-  The dominant bebop scale is a diatonic scale with a chromatic note added
-  between the chord seventh and the root, so that when played in eighth notes
+  The dominant bebop scale is a Mixolydian scale with a chromatic note added
+  between the chordal seventh and the root, so that when played in eighth notes
   the chord tones fall on the beat. David Baker (who played with George
   Russell early in his career) is usually credited with inventing the
   term; see \headlesscite{baker:1985}.}
+
+\fntext{csa-15}{%
+  In this figure and others following, I have omitted the chord symbol from
+  the chord-scale triples to save space, since it is obvious from the
+  transcription itself.}
 
 %%% Local Variables:
 %%% mode: latex
