Add paragraph about chord-scale flexibility.

--- a/footnotes/ch1-notes.tex
+++ b/footnotes/ch1-notes.tex
@@ -284,6 +284,7 @@
   impact.}
 
 \fntext{ds-3}{%
+  \label{fn:minor-tonic-choices}
   The tonic harmony is given as it is in \emph{The Real Book}, simply as Gm.
   In performance, a musician might choose to play this chord with a major
   seventh (\h{GmM7}), a sixth (\h{Gm6}), or even a minor seventh (\h{Gm7}; this
