--- a/footnotes/ch4-notes.tex
+++ b/footnotes/ch4-notes.tex
@@ -364,6 +364,19 @@
   the chord-scale triples to save space, since it is obvious from the
   transcription itself.}
 
+\fntext{csa-16}{%
+  By tallying up all of the appearances of a given chord--scale pairing, it
+  would be possible to develop something like a snapshot of a performer's
+  chord--scale choices. Doing so could perhaps bring some clarity to
+  discussions of jazz style (as in, for example, David Baker's \emph{Giant of
+    Jazz} series) by incorporating the chord-scale transformations developed
+  here. While this is an interesting possibility, we will pursue it no further
+  here.}
+
+\fntext{csa-17}{%
+  The only time it is not occurs in Stitt's first chorus ($3$A\tsub{1},
+  mm.~67--68), where he plays a sustained D\nat\ through all four chords.}
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../diss"
