Add paragraph about implicit diatonicism in solos.
I think this finishes up the Autumn Leaves analysis for now.

--- a/footnotes/ch4-notes.tex
+++ b/footnotes/ch4-notes.tex
@@ -377,6 +377,18 @@
   The only time it is not occurs in Stitt's first chorus ($3$A\tsub{1},
   mm.~67--68), where he plays a sustained D\nat\ through all four chords.}
 
+\fntext{csa-18}{%
+  The dominant, \h{D7}, is not in the 2\flat\ collection, since it is not
+  diatonic in G minor. This collection also results in the major scale (not
+  the Lydian) for the \h{Bbmaj7} chords, which is borne out by the \Eflat{}s
+  in the recording (see mm.~23--24, 55, and 88). The \h{Gm} chord itself is
+  usually played with E\nat, placing it in the $1$\flat\ collection.}
+
+\fntext{csa-19}{%
+  In fact, Stitt's note choices here would also work well if the rhythm
+  section played the implied \h{Ebmaj7} in the fourth bar, suggested in Figure
+  \ref{ds:displaced-cycle}.}
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../diss"
