Add initial text on Henderson's "Isotope" solo.
Text on pivot intervals showing up in chord-scales, plus ii7
interpolation.

--- a/footnotes/ch4-notes.tex
+++ b/footnotes/ch4-notes.tex
@@ -389,6 +389,18 @@
   section played the implied \h{Ebmaj7} in the fourth bar, suggested in Figure
   \ref{ds:displaced-cycle}.}
 
+\fntext{csa-20}{%
+  Other blues tunes negotiate this problem by inserting another chord in the
+  first four bars. Thelonious Monk's ``Misterioso,'' to take a typical
+  example, is a blues in \Bflat: the first four bars contain the progression
+  \h{Bb7}--\h{Eb7}--\h{Bb7}--\h{Bb7}. In a case like this, the first \h{Bb7}
+  functions as tonic, while the last two bars function as dominant of the
+  following IV chord.}
+
+\fntext{csa-21}{%
+  If a performer chooses non-diatonic scales for the \ii and \V chords, the
+  analysis would be affected; in the diatonic case, it is not.}
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../diss"
