Add text about signature trans. in "Isotope."

--- a/footnotes/ch4-notes.tex
+++ b/footnotes/ch4-notes.tex
@@ -401,6 +401,31 @@
   If a performer chooses non-diatonic scales for the \ii and \V chords, the
   analysis would be affected; in the diatonic case, it is not.}
 
+\fntext{csa-22}{%
+  Harmonic generalization is part and parcel of the blues; the blues scale
+  derives its name in part from the fact that the tonic blues scale can be
+  (and often is) played over an entire blues chorus. As Mark Levine has it,
+  ``playing the blues scale over the I--IV--V chords of a basic blues yields
+  dissonances hardly acceptable in traditional theory. But these dissonances
+  have been present in jazz since its
+  inception'' \parentext{\headlesscite[233]{levine:1995}}.}
+
+\fntext{csa-23}{%
+  % xxx rewrite if change to $t_k$ happens in chapter 1
+  This operator should be read here as Hook's $t_k$ operator, which operates
+  on ``floating diatonic forms,'' \emph{not} as the $t_k$ operator defined in
+  Section \ref{sec:diatonic-spaces}. See \cite[139--41]{hook:2008} for
+  details.}
+
+\fntext{csa-24}{%
+  Incidentally, the diatonic collection of the \h{C7} chord itself is
+  ambiguous. We might hear it as the 1\sharp\ collection (as part of a Lydian
+  \flat{}7 scale), the 1\flat\ collection (hearing \h{C7} as a dominant, as
+  the second mode of of \Bflat Lydian), or perhaps even the 2\flat\ collection
+  (as a harmonic generalization of \h{Bb7} in the first six bars of the
+  chorus). Exactly which diatonic collection we choose is not important to the
+  analysis here.}
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../diss"
