Add text on limitations; conclusion of chapter.
That should be it for chapter 4, tipping the scales (before edits) at 50
pages even. (!)

--- a/footnotes/ch4-notes.tex
+++ b/footnotes/ch4-notes.tex
@@ -426,6 +426,25 @@
   chorus). Exactly which diatonic collection we choose is not important to the
   analysis here.}
 
+\fntext{csa-25}{%
+  The four-voice tesseract in \cite[106]{tymoczko:2011} is his way of
+  describing these motions; Cohn's Four-Cube Trio in Figure
+  \ref{maj3:four-cube-trio} gives the same voice-leading space.}
+
+\fntext{csa-26}{%
+  Jerry Coker calls this kind of line \abbrev{CESH}, which is short for ``contrapuntal
+  elaboration of static harmony'' \parentext{\citetitle[61--67]{coker:elements}}.}
+
+\fntext{csa-27}{%
+  None of the passages discussing \abbrev{CESH} or ``linear chromaticism'' in
+  Coker's book, for example, say anything about harmony, nor do any of the
+  passages that feature discussions of voice-leading (what other authors refer
+  to as ``guide tones'') mention it as a harmonic phenomenon. In his
+  discussion of the ``7--3 resolution'', he says that he is ``simply concerned
+  with the smooth connection (voice-leading) of two chords, especially with
+  respect to melodic, rather than harmonic,
+  implications'' \parentext{\citetitle[19]{coker:elements}}.}
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../diss"
