Fix long URL in bibtex file.
This was making the automatic bib file formatting really annoying every
time, so changing this to a string concatenation fixes it.

--- a/diss.bib
+++ b/diss.bib
@@ -502,7 +502,8 @@ Theory} }
   title       = {Generic Sequences and the Generic \emph{Tonnetz}},
   journal     = {Oxford Handbooks Online},
   year        = {2014},
-  url         = {http://www.oxfordhandbooks.com/view/10.1093/oxfordhb/9780199935321.001.0001/oxfordhb-9780199935321-e-003}
+  url         = "http://www.oxfordhandbooks.com/view/10.1093/oxfordhb/" 
+              # "9780199935321.001.0001/oxfordhb-9780199935321-e-003"
 }
 
 @inproceedings{hook:heptachords,
