Text edits for section 4.1.

--- a/footnotes/ch4-notes.tex
+++ b/footnotes/ch4-notes.tex
@@ -2,15 +2,17 @@
 
 % Lydian Chromatic Concept
 \fntext{lcc-1}{%
-  \cite{russell:lcc}; hereafter, simply \lcc. References to the book in
-  this dissertation will be to this final edition (Russell died in 2009)
-  unless otherwise noted. Though a full reception history of the \emph{Lydian
-    Chromatic Concept} is beyond the scope of this project, it is worth noting
-  that the later editions focus more heavily on the theory than the earlier
-  editions, which were more practical in nature. In the original edition, the
-  section on theoretical foundations appears after eight initial ``lessons'';
-  in the 2001 edition, this material has been moved front and center, to
-  Chapter 1.\nocite{russell:1959}}
+  \cite{russell:lcc}; hereafter, simply \lcc. References to the book in this
+  dissertation will be to this final edition unless otherwise noted. Though a
+  full reception history of the \emph{Lydian Chromatic Concept} is beyond the
+  scope of this project, it is worth noting that the later editions focus more
+  heavily on the theory than the earlier editions, which were more practical
+  in nature. In the original edition, the section on theoretical foundations
+  appears after eight initial ``lessons''; in the 2001 edition, this material
+  has been moved front and center to Chapter 1. Furthermore, the last edition
+  was reframed as the first volume in what was to be a multi-volume set; at
+  the time of Russell's death in 2009, only the first volume had been
+  published.\nocite{russell:1959}}
 
 
 \fntext{lcc-2}{%
@@ -65,15 +67,15 @@
   scale).}
 
 \fntext{lcc-12}{%
-  Exactly what Russell means by ``seventh'' is also unclear; the dominant
-  seventh is not represented in the nine-tone order, so it seems likely that
-  he means the major seventh chords.}
+  Exactly what Russell means by ``seventh'' is unclear; he likely means the
+  dominant seventh, though all four standard seventh chord types (major,
+  minor, diminished, and half-diminished) appear in the consonant nucleus.}
 
 \fntext{lcc-13}{%
   The remainder of this paragraph is a gloss on the material in \lcc 12--17.}
 
 \fntext{lcc-14}{%
-  The objection is perhaps obvious: if the ideas about Lydian tonal
+  The counterargument is perhaps obvious: if the ideas about Lydian tonal
   organization have fallen by the wayside, why bother trying to resuscitate
   them? As I hope to show in the following sections, Russell's systematic
   approach is useful as a means of formalizing what has since become implicit
@@ -126,18 +128,18 @@
   views on chord--scale theory in \citetitle[174--79]{tymoczko:1997}. Other
   texts that discuss chord--scale theory at length include \cite{jaffe:1996};
   \cite{berklee:harmony}; \cite{aebersold:handbook}; and
-  \cite{grafnettles:1997}. I am eliding the minor differences in this
-  discussion, since they will not affect the transformational system in the
+  \cite{grafnettles:1997}. I am eliding the minor differences in these
+  discussions, since they will not affect the transformational system in the
   next section. John Bishop provides a good overview of the distinctions in
   \headlesscite[77--81]{bishop:2012}.}
 
 \fntext{lcc-22}{%
   Levine and others often describe only the first choice (Russell would say
-  ``most ingoing'') for matching a scale with a chord. Russell's system of
+  ``most ingoing'') for matching a scale with a chord; Russell's system of
   substituting other member scales sharing the same Lydian tonic is generally
   not present in the later texts. For jazz musicians the melodic minor scale
-  refers only to its ascending form, which is generally played in both
-  directions in jazz.}
+  refers only to its ascending form, which is played in both directions in
+  jazz.}
 
 % Chord-scale transformations
 
