Text edits for section 4.2.

--- a/diss.bib
+++ b/diss.bib
@@ -105,6 +105,7 @@ Theory} }
   author      = {Bishop, John},
   title       = {A Permutational Triadic Approach to Jazz Harmony and the
                 Chord/Scale Relationship},
+  shorttitle  = {A Permutational Triadic Approach},
   school      = {Louisiana State University},
   year        = {2012}
 }
