--- a/footnotes/ch4-notes.tex
+++ b/footnotes/ch4-notes.tex
@@ -170,7 +170,7 @@
 
 \fntext{cst-5}{%
   Indeed, this lack of focus on common-tone connections in the pedagogical
-  literature is the main reason for Love's ``Model of Common Tone
+  literature is the main impetus for Love's ``Model of Common Tone
   Connections.''\nocite{love:2009}}
 
 \fntext{cst-6}{%
@@ -185,9 +185,16 @@
   These names have been chosen to reflect common jazz usage, so scale 3 is the
   Lydian dominant scale rather than the acoustic scale.}
 
+\fntext{cst-7a}{%
+  Admittedly, Russell himself would likely object to this characterization
+  since, as noted in the first section of this chapter, the Lydian and major
+  scales are fundamentally different objects. In practice, many jazz musicians
+  do avoid \sd4 in major scales, and so whether a given scale is Lydian or
+  major is often ambiguous.}
+
 \fntext{cst-8}{%
-  In fact, the blues scale is probably much more common than some of Russell's
-  vertical scales (especially the Lydian diminished scale).}
+  In fact, the blues scale is probably more common than some of Russell's
+  vertical scales.}
 
 \fntext{cst-9}{%
   \cite{hook:2008}. In this section we will not apply the full power of Hook's
@@ -215,10 +222,11 @@
   We might consider using $-7$ rather than $1$ in the second place here, to
   reflect the intuition that the move from the blues scale to the parent
   Lydian is an ingoing motion. This seems to be a valid judgment, but affects
-  the group structure of \ivls ($-7$ is not a member of $\intZ_8$). We will
-  return to this limitation in the next section.}
+  the group structure of \ivls ($-7$ is not a member of $\intZ_8$).}
 
 \fntext{cst-14}{%
+  % xxx This footnote is no longer referenced in the text...I can't decide
+  % whether it should stay or not.
   Because the diatonic modes are well-known, I have substituted ``diatonic''
   for ``Lydian'' in the first place here in the hopes that it will be less
   confusing. This way, we might refer to the first collection in Figure
