Text edits for section 4.3.

--- a/footnotes/ch4-notes.tex
+++ b/footnotes/ch4-notes.tex
@@ -299,18 +299,24 @@
   lingua franca \parentext{\headlesscite[4]{owens:1995}}. To avoid focusing on
   Parker and Coltrane is not to say that the performers examined here are not
   also great musicians; all of them (but especially Stitt and Henderson) are
-  widely regarded among jazz musicians.}
+  highly regarded among jazz musicians.}
+
+\fntext{csa-3a}{%
+  \cite[50--54]{coker:elements}. Coker's manual is intended for student
+  improvisers, but is analytically useful as something of an encyclopedia of
+  idiomatic melodic devices in improvisations, since he provides many examples
+  of each technique. He is one of the only authors I am aware of to discuss
+  this aspect of performance; most others simply do not mention it at all, or
+  hand-wave the problem away, saying that the knowledge will come by listening
+  to and transcribing many recorded performances.}
 
 \fntext{csa-4}{%
-  \Cite[46]{coker:elements}. Coker's manual is primarily for student
-  improvisers (hence the wording here), but is also analytically useful as a
-  handbook of common improvisational devices.}
+  \Cite[46]{coker:elements}.}
 
 \fntext{csa-5}{%
-  There are two staves in this figure because Kirk often played multiple
-  saxophones simultaneously. Here the tenor saxophone (which sounds down an
-  octave) is played with his left hand and the manzello---a modified soprano
-  saxophone---is played with his right.}
+  The tenor saxophone here (which sounds down an octave) is played with his
+  left hand and the manzello---a modified soprano saxophone---is played with
+  his right.}
 
 \fntext{csa-6}{%
   The diagram here assumes \h{Ab7}, since it is more common to substitute
@@ -339,9 +345,10 @@
     \cite[162]{hook:2007gmit}}.}
 
 \fntext{csa-10}{%
-  Figures \ref{csa:kirk-tfo-progs}c is missing beats 2--4 of the third bar
+  Figure \ref{csa:kirk-tfo-progs}c is missing beats 2--4 of the third bar
   because this \tfo leads into the turnaround in Figure
-  \ref{csa:first-chorus-turnaround}, which distracts from the topic at hand.}
+  \ref{csa:first-chorus-turnaround}, which is discussed at length above and
+  would distract from the topic at hand.}
 
 \fntext{csa-11}{%
   Absent any additional information we will assume Russell's most ingoing
@@ -396,8 +403,8 @@
 
 \fntext{csa-19}{%
   In fact, Stitt's note choices here would also work well if the rhythm
-  section played the implied \h{Ebmaj7} in the fourth bar, suggested in Figure
-  \ref{ds:displaced-cycle}.}
+  section were to play \h{Ebmaj7} in the fourth bar, which is suggested in
+  Figure \ref{ds:displaced-cycle}.}
 
 \fntext{csa-20}{%
   Other blues tunes negotiate this problem by inserting another chord in the
@@ -422,7 +429,7 @@
 
 \fntext{csa-23}{%
   % xxx rewrite if change to $t_k$ happens in chapter 1
-  This operator should be read here as Hook's $t_k$ operator, which operates
+  This operator should be read here as Hook's $t_k$, which operates
   on ``floating diatonic forms,'' \emph{not} as the $t_k$ operator defined in
   Section \ref{sec:diatonic-spaces}. See \cite[139--41]{hook:2008} for
   details.}
@@ -439,7 +446,7 @@
 \fntext{csa-25}{%
   The four-voice tesseract in \cite[106]{tymoczko:2011} is his way of
   describing these motions; Cohn's Four-Cube Trio in Figure
-  \ref{maj3:four-cube-trio} gives the same voice-leading space.}
+  \ref{maj3:four-cube-trio} describes the same voice-leading space.}
 
 \fntext{csa-26}{%
   Jerry Coker calls this kind of line \abbrev{CESH}, which is short for ``contrapuntal
