--- a/footnotes/ch4-notes.tex
+++ b/footnotes/ch4-notes.tex
@@ -82,20 +82,20 @@
   knowledge.}
 
 \fntext{lcc-15}{%
-  Dmitri Tymoczko makes the argument that something like chord--scale theory
+  Dmitri Tymoczko makes the argument that something like chord-scale theory
   existed in the music of the Impressionists, and suggests that jazz musicians
   may have discovered it by listening to Debussy and
   Ravel \parentext{\citetitle[152 and 173]{tymoczko:1997}}. Given the initial
   reception of the \emph{Concept} as the first real theory of jazz, I am
   skeptical of this claim, and treat Russell's ideas as their first
-  appearance. Certainly, though, the tenets of chord--scale theory can be
+  appearance. Certainly, though, the tenets of chord-scale theory can be
   applied to other musics: Russell himself examines passages of Bach,
   Beethoven, and Ravel, among others.}
 
 \fntext{lcc-16}{%
   In order to avoid confusion, we will generally respect the distinction
   between chord and scale from this point on. Where we have occasion to refer
-  to the explicit chord--scale equivalence, we will use the term
+  to the explicit chord/scale equivalence, we will use the term
   ``chord-scale'' rather than Russell's ``chordmode.'' Russell's
   interchangeable use of ``chord,'' ``chordmode,'' and ``mode'' tends to
   confuse more than it helps, and ``chord-scale'' is the generally accepted
@@ -125,8 +125,8 @@
 
 \fntext{lcc-21}{%
   \cite[31--94]{levine:1995}. Dmitri Tymoczko summarizes several textbooks'
-  views on chord--scale theory in \citetitle[174--79]{tymoczko:1997}. Other
-  texts that discuss chord--scale theory at length include \cite{jaffe:1996};
+  views on chord-scale theory in \citetitle[174--79]{tymoczko:1997}. Other
+  texts that discuss chord-scale theory at length include \cite{jaffe:1996};
   \cite{berklee:harmony}; \cite{aebersold:handbook}; and
   \cite{grafnettles:1997}. I am eliding the minor differences in these
   discussions, since they will not affect the transformational system in the
@@ -382,9 +382,9 @@
   transcription itself.}
 
 \fntext{csa-16}{%
-  By tallying up all of the appearances of a given chord--scale pairing, it
+  By tallying up all of the appearances of a given chord/scale pairing, it
   would be possible to develop something like a snapshot of a performer's
-  chord--scale choices. Doing so could perhaps bring some clarity to
+  chord-scale choices. Doing so could perhaps bring some clarity to
   discussions of jazz style (as in, for example, David Baker's \emph{Giant of
     Jazz} series) by incorporating the chord-scale transformations developed
   here. While this is an interesting possibility, we will pursue it no further
