Minor final(ish) edits for chapter 4.

--- a/footnotes/ch4-notes.tex
+++ b/footnotes/ch4-notes.tex
@@ -189,7 +189,7 @@
   Admittedly, Russell himself would likely object to this characterization
   since, as noted in the first section of this chapter, the Lydian and major
   scales are fundamentally different objects. In practice, many jazz musicians
-  do avoid \sd4 in major scales, and so whether a given scale is Lydian or
+  do avoid \sd4 in major scales, and so whether a given passage is Lydian or
   major is often ambiguous.}
 
 \fntext{cst-8}{%
@@ -431,8 +431,7 @@
   % xxx rewrite if change to $t_k$ happens in chapter 1
   This operator should be read here as Hook's $t_k$, which operates
   on ``floating diatonic forms,'' \emph{not} as the $t_k$ operator defined in
-  Section \ref{sec:diatonic-spaces}. See \cite[139--41]{hook:2008} for
-  details.}
+  Section \ref{sec:diatonic-spaces}. See \cite[139--41]{hook:2008}.}
 
 \fntext{csa-24}{%
   Incidentally, the diatonic collection of the \h{C7} chord itself is
