Add "Eternal Triangle" transcription.
(Still needs editing, but better to have it here now.)

--- a/appendices/transcriptions.tex
+++ b/appendices/transcriptions.tex
@@ -40,6 +40,7 @@ refer to a given passage's harmonic context.
 \begin{compactitem}[\hspace{1.5em}]
     \item ``Autumn Leaves'' -- Gene Ammons and Sonny Stitt \DottedPage{transcription:autumn-leaves}
     \item ``Blues for Alice'' -- Rahsaan Roland Kirk \DottedPage{transcription:blues-for-alice}
+    \item ``The Eternal Triangle'' -- Sonny Stitt and Sonny Rollins \DottedPage{transcription:eternal-triangle}
     \item ``Isotope'' -- Joe Henderson \DottedPage{transcription:isotope}
     \item ``Rhythm-a-ning'' -- Johnny Griffin and Thelonious Monk \DottedPage{transcription:rhythm-a-ning}
 \end{compactitem}
@@ -72,6 +73,16 @@ refer to a given passage's harmonic context.
     separate staff for each instrument. The ``manzello'' is a modified soprano
     saxophone (both names are given here).}
 \includepdf[pages=2-,pagecommand={},noautoscale]{eps/transcriptions/blues-for-alice.pdf}
+
+\phantomsection
+\addcontentsline{toc}{section}{“The Eternal Triangle” -- Sonny Stitt and Sonny
+  Rollins}
+\label{transcription:eternal-triangle}
+\centerGraphic[page=1,,clip,trim=0pt 1in 0pt 0pt]{eps/transcriptions/eternal-triangle.pdf}
+\blankfootnote{%
+  Sonny Rollins is indicated in the transcription with [S.R], and Sonny Stitt
+  with [S.S.].}
+\includepdf[pages=2-,pagecommand={},noautoscale]{eps/transcriptions/eternal-triangle.pdf}
 
 \phantomsection
 \addcontentsline{toc}{section}{“Isotope” -- Joe Henderson}
