Stub out chapter 5 files.

--- a/diss.tex
+++ b/diss.tex
@@ -8,9 +8,10 @@
 \input{footnotes/ch2-notes}
 \input{footnotes/ch3-notes}
 \input{footnotes/ch4-notes}
+\input{footnotes/ch5-notes}
 
 % control what we’re compiling
-\includeonly{chapters/ch4}
+\includeonly{chapters/ch5}
 
 \begin{document}
 
@@ -21,6 +22,7 @@
   \include{chapters/ch2}
   \include{chapters/ch3}
   \include{chapters/ch4}
+  \include{chapters/ch5}
   \include{chapters/appendices}
 \backmatter
   \include{chapters/back}
