Change \odot to \bullet throughout.
(JH noted in chapter 2 comments, but relevant everywhere.)

--- a/footnotes/ch1-notes.tex
+++ b/footnotes/ch1-notes.tex
@@ -354,7 +354,7 @@
 
 \fntext{ds-11b}{%
   Recall the discussion in the preface (page \pageref{sec:notes-to-reader}):
-  the symbol $\odot$ here represents function composition from left-to-right.}
+  the symbol $\bullet$ here represents left-to-right function composition.}
 
 \fntext{ds-11}{%
   This observation has not gone unrecognized by jazz musicians: at least one
