--- a/footnotes/ch2-notes.tex
+++ b/footnotes/ch2-notes.tex
@@ -200,7 +200,7 @@
   for example, to construct a space where tritone substitutes are normative by
   defining \textsc{ResI} to be equal to \tft; in this case, the gray arrows in
   Figure \ref{tfe:generic-space} would represent the transformation
-  \textsc{7th} $\odot$ $T_6$.
+  \textsc{7th} $\bullet$ $T_6$.
 }
 
 \fntext{tfe-3}{%
