--- a/footnotes/ch3-notes.tex
+++ b/footnotes/ch3-notes.tex
@@ -47,7 +47,7 @@
 \fntext{mts-7}{%
   We could easily define a BD\tsub{blues} transformation, similar to
   TF\tsub{blues} from the last chapter; for now, we can simply understand this
-  variant as BD $\odot$ \textsc{7th}.}
+  variant as BD $\bullet$ \textsc{7th}.}
 
 \fntext{mts-7b}{%
   The question of the meaning of ``function'' is is a difficult one. Here I
