Initial text edits to chapter 2, per JH.

--- a/footnotes/ch2-notes.tex
+++ b/footnotes/ch2-notes.tex
@@ -76,7 +76,9 @@
   These changes are taken from \emph{The Real Book}, and reflect what is
   played on the \emph{Cornbread} recording.\nocite{morgan:cornbread} In this figure,
   the circle indicates the tonic, while the numbers on the labels indicate the
-  order of transformations.}
+  order of transformations. Because ``Ceora'' uses only a part of the space,
+  the circle of Figure \ref{tf:tf-circle-fifths} has been squared off here so
+  that the labels are easier to read.}
 
 \fntext{tf-11}{%
   We will return to the concept of tritone substitutes in the next section.}
