--- a/mjmdiss.sty
+++ b/mjmdiss.sty
@@ -316,7 +316,7 @@
 \newcommand{\TFarrow}{\ensuremath{\xrightarrow{\mathrm{TF}\,}}}
 \newcommand{\TFTarrow}{\ensuremath{\xrightarrow{\mathrm{TF}_\mathrm{T}\,}}}
 \newcommand{\ECarrow}{\ensuremath{\xrightarrow{\mathrm{EC}\,}}}
-\newcommand{\ECTarrow}{\ensuremath{\xrightarrow{\mathrm{EC}_\mathrm{T}\,}}}
+\newcommand{\ECCarrow}{\ensuremath{\xrightarrow{\mathrm{EC}_\mathrm{C}\,}}}
 \newcommand{\CSarrow}{\ensuremath{\xrightarrow{\mathrm{CS}\,}}}
 \newcommand{\intZ}{\ensuremath{\mathbb{Z}}}
 \newcommand{\la}{\ensuremath{\langle}\xspace}
