Minor updates to chapter 2 footnotes.

--- a/diss.bib
+++ b/diss.bib
@@ -498,6 +498,17 @@ Theory} }
   year        = {2011}
 }
 
+@article{hook:2013,
+  author      = {Hook, Julian},
+  title       = {Contemporary Methods in Mathematical Music Theory: A
+                Comparative Case Study},
+  journal     = {Journal of Mathematics and Music},
+  volume      = {7},
+  number      = {2},
+  pages       = {89--102},
+  year        = {2013}
+}
+
 @article{hook:2014,
   author      = {Hook, Julian},
   title       = {Generic Sequences and the Generic \emph{Tonnetz}},
