--- a/footnotes/ch2-notes.tex
+++ b/footnotes/ch2-notes.tex
@@ -47,12 +47,13 @@
   leadings” in his study of atonal voice leading; \headlesscite{straus:2003}.}
 
 \fntext{tf-7}{%
-  Hook himself makes this clear, noting that for any two sets S and
-  T it is possible to define a single-type transformation in the union set
-  S $\cup$ T. He also notes that even when a single-type
-  transformation is possible, ``the cross-type approach is often
-  simpler and more natural,'' which certainly seems to be the case
-  here. \headlesscite[5n8]{hook:2007}.}
+  Hook himself makes this clear, noting that for any two sets S and T it is
+  possible to define a single-type transformation in the union set S $\cup$ T,
+  though it is not always clear how a function defined on one set should be
+  extended to cover both. He also notes that even when a single-type
+  transformation is possible, ``the cross-type approach is often simpler and
+  more natural,'' which certainly seems to be the case here.
+  \headlesscite[5n8]{hook:2007}.}
 
 \fntext{tf-8}{%
   It would be possible to form a \gis\ by considering all ordered triples as
@@ -128,11 +129,11 @@
   same triad). We can define \slideS so that it acts in a similar way, but
   we will delay that possibility until Section \ref{}.}
 
-% xxx look up this faure passage
 \fntext{tft-4}{%
   The \slideS\ transformation can be found in a chromatic sequence in the
-  second movement of the Fauré string quartet, mm.~36--39. (I am thankful to
-  Julian Hook for pointing this example out to me.)}
+  second movement of the Fauré string quartet, mm.~36--39. Julian Hook
+  analyzes this passage from a number of different mathematical perspectives
+  in \headlesscite{hook:2013}.}
 
 \fntext{tft-5}{%
   This progression is often known as the ``Bird Blues,'' though Mark Levine
