Remove missing reference in ch. 2 footnote.

--- a/footnotes/ch2-notes.tex
+++ b/footnotes/ch2-notes.tex
@@ -118,7 +118,6 @@
   triadic \textsc{slide}, which maintains the root and fifth of a triad while
   changing the quality of the third.}
 
-% xxx put this section number in later!
 \fntext{tft-3a}{%
   The \textsc{slide} transformation was introduced by David Lewin
   (\headlesscite[178]{lewin:gmit}), but has since become a part of of the
@@ -126,8 +125,7 @@
   is defined here only as a transformation from \I chords to
   \ii chords, but of course the triadic \textsc{slide} is an involution
   (two successive applications of \textsc{slide} to any triad will result in the
-  same triad). We can define \slideS so that it acts in a similar way, but
-  we will delay that possibility until Section \ref{}.}
+  same triad).}
 
 \fntext{tft-4}{%
   The \slideS\ transformation can be found in a chromatic sequence in the
