Initial text for ch. 5, general rhythm changes.

--- a/footnotes/ch5-notes.tex
+++ b/footnotes/ch5-notes.tex
@@ -1,5 +1,28 @@
 % Chapter 5 notes
 
+\fntext{rcg-1}{%
+  ``I Got Rhythm'' was written in 1930 and first appeared in the music
+  \emph{Girl Crazy}. Because the phrase ``rhythm changes'' has developed a
+  life beyond its initial meaning, it is rendered throughout this chapter
+  without quotes and with a lowercase ``r.'' It is commonly used both as a
+  noun and as as an adjective (as in ``Oleo is a rhythm changes tune'').}
+
+\fntext{rcg-2}{%
+  The vast majority of rhythm changes tunes are in the key of \Bflat. Those
+  in Table \ref{rcg:rhythm-tunes} that are not are Hoyt Curtain's theme to the
+  cartoon \emph{The Flintstones} and Bud Powell's ``Wail'' (both in \Eflat),
+  along with Thad Jones's ``Tiptoe'' (\Aflat).}
+
+\fntext{rcg-3}{%
+  Adding to this virtuosity is the fact that many recordings of rhythm
+  changes are quite fast. Of the standard bebop recordings of tunes in Table
+  \ref{rcg:rhythm-tunes}, Parker's recording of ``Moose the Mooche'' is 212
+  bpm, Powell's ``Wail'' is 270 bpm, while the Parker/Gillespie
+  ``Anthropology'' burns along at roughly 305 bpm.}
+
+\fntext{rcg-4}{%
+  The ``mix-and-match'' metaphor comes from \cite[149]{jaffe:1996}.}
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../diss"
