--- a/footnotes/ch5-notes.tex
+++ b/footnotes/ch5-notes.tex
@@ -1,14 +1,15 @@
 % Chapter 5 notes
 
 \fntext{rcg-1}{%
-  ``I Got Rhythm'' was written in 1930 and first appeared in the music
-  \emph{Girl Crazy}. Because the phrase ``rhythm changes'' has developed a
+  ``I Got Rhythm'' was written in 1930 and first appeared in the musical
+  \emph{Girl Crazy}. Because the phrase ``Rhythm changes'' has developed a
   life beyond its initial meaning, it is rendered throughout this chapter
-  without quotes and with a lowercase ``r.'' It is commonly used both as a
-  noun and as as an adjective (as in ``Oleo is a rhythm changes tune'').}
+  without quotes but with a capital ``R.'' The phrase is normally used as a
+  noun, while adjectival uses drop the ``changes'' (as in ``Oleo is a Rhythm
+  tune'').}
 
 \fntext{rcg-2}{%
-  The vast majority of rhythm changes tunes are in the key of \Bflat. Those
+  The vast majority of Rhythm tunes are in the key of \Bflat. Those
   in Table \ref{rcg:rhythm-tunes} that are not are Hoyt Curtain's theme to the
   cartoon \emph{The Flintstones} and Bud Powell's ``Wail'' (both in \Eflat),
   along with Thad Jones's ``Tiptoe'' (\Aflat).}
