Add text explaining first four bars of Rhythm.

--- a/diss.bib
+++ b/diss.bib
@@ -36,6 +36,15 @@ Theory} }
   year        = {1978}
 }
 
+@book{aebersold:rhythm,
+  author      = {Aebersold, Jamey},
+  title       = {\mkbibquote{I Got Rhythm} Changes in All Keys},
+  address     = {New Albany, IN},
+  publisher   = {Jamey Aebersold Jazz},
+  year        = {1991},
+  series      = {Jamey Aebersold Play-A-Long Series, vol.~47}
+}
+
 @phdthesis{arthurs:2011,
   author      = {Arthurs, Daniel},
   title       = {Reconstructing Tonal Principles in the Music of {Brad
