--- a/footnotes/ch5-notes.tex
+++ b/footnotes/ch5-notes.tex
@@ -24,6 +24,16 @@
 \fntext{rcg-4}{%
   The ``mix-and-match'' metaphor comes from \cite[149]{jaffe:1996}.}
 
+\fntext{rcg-5}{%
+  These six harmonizations do not begin to constitute a complete set of
+  substitutions for these four bars. Jamey Aebersold gives 43 harmonizations
+  of the Rhythm A section in \headlesscite[26]{aebersold:rhythm}.}
+
+\fntext{rcg-6}{%
+  I have not included another copy of the complete \tf space here, but one can
+  be found in Figure \ref{tft:complete-space}
+  (p.~\pageref{tft:complete-space}).}
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../diss"
