Finish discussion of generic Rhythm substitutions.

--- a/footnotes/ch5-notes.tex
+++ b/footnotes/ch5-notes.tex
@@ -12,7 +12,8 @@
   The vast majority of Rhythm tunes are in the key of \Bflat. Those
   in Table \ref{rcg:rhythm-tunes} that are not are Hoyt Curtain's theme to the
   cartoon \emph{The Flintstones} and Bud Powell's ``Wail'' (both in \Eflat),
-  along with Thad Jones's ``Tiptoe'' (\Aflat).}
+  along with Thad Jones's ``Tiptoe'' (\Aflat) and Thelonious Monk's ``52nd
+  Street Theme'' (C).}
 
 \fntext{rcg-3}{%
   Adding to this virtuosity is the fact that many recordings of rhythm
@@ -33,6 +34,21 @@
   I have not included another copy of the complete \tf space here, but one can
   be found in Figure \ref{tft:complete-space}
   (p.~\pageref{tft:complete-space}).}
+
+\fntext{rcg-7}{%
+  This \h{Eo7} is functionally ambiguous; it could also stand in for an
+  \h{A7b9} as the dominant (or \h{C7b9} as part a backdoor progression) to the
+  following \h{Dm7}. It is spelled as \h{Eo7} to produce a smooth bass line
+  from \Eflat in the first half of the bar.}
+
+\fntext{rcg-8}{%
+  Given the modular nature of Rhythm tunes, the genre seems particularly ripe
+  for a schema theory approach, following in the footsteps of
+  \cite{gjerdingen:2007}. The two- and four-bar units here (turnarounds,
+  dominant cycles) are not unlike the stock phrases used in the galant style,
+  and jazz pedagogical materials like the Aebersold and Jaffe texts previously
+  cited could easily serve as analogs to the 18th-century Italian
+  \emph{partimenti} often used by schema theorists.}
 
 %%% Local Variables:
 %%% mode: latex
