Add text about substitution vs. chord-scales.

--- a/diss.bib
+++ b/diss.bib
@@ -367,6 +367,17 @@ Theory} }
   year        = {1995}
 }
 
+@article{ford:2002,
+  author      = {Ford, Philip},
+  title       = {Somewhere/Nowhere: Hipness as an Aesthetic},
+  journal     = {The Musical Quarterly},
+  volume      = {86},
+  number      = {1},
+  pages       = {49--81},
+  month       = apr,
+  year        = {2002}
+}
+
 @book{forte:1995,
   author      = {Forte, Allen},
   title       = {The American Popular Ballad of the Golden Era, 1924--1950},
