--- a/footnotes/ch5-notes.tex
+++ b/footnotes/ch5-notes.tex
@@ -50,6 +50,27 @@
   cited could easily serve as analogs to the 18th-century Italian
   \emph{partimenti} often used by schema theorists.}
 
+\fntext{rcg-9}{%
+  A lack of understanding about the recorded history of jazz is often seen as
+  something of a social mistake, especially in the case of Rhythm changes.
+  Mark Levine tells a story of playing a Rhythm tune with Sonny Stitt, when
+  Stitt began to play the cycle progression of Figure \ref{rcg:rc-first-four}e
+  over the A sections. Levine recounts: ``after a couple of choruses, glares
+  from Sonny, and a growing sense of feeling smaller and smaller, I finally
+  `strolled,' or stopped playing. After the set, I asked him what were the
+  changes he was playing, and he growled `just listen, man.'{}'' This story is
+  accompanied by a footnote that (based on the word of saxophonist Don Byas)
+  attributes the cycle progression to pianist Art Tatum.
+  \cite[242]{levine:1995}. \\ \hspace{2.55em}%
+  Phil Ford notes that this kind of secret knowledge is fundamental to
+  understanding jazz as a part of an emerging hip culture in the 1940s--50s,
+  which is incidentally the time that Rhythm tunes began to proliferate. As he
+  puts it, ``{}`knowing the score' is what practically defines the hipster:
+  \emph{hip}, in its original meaning, means to be
+  aware'' \parentext{\headlesscite[54]{ford:2002}}. We might instead read
+  ``knowing the changes,'' since to really know Rhythm changes involves knowing
+  about the wide variety of harmonic possibilities that defines the genre.}
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../diss"
