Add intro text on Rhythm-a-ning.

--- a/discog.bib
+++ b/discog.bib
@@ -299,6 +299,17 @@
   type        = {\abbrev{CD}}
 }
 
+@music{monk:crisscross,
+  author      = {Monk, Thelonious},
+  title       = {Criss-Cross},
+  userd       = {Columbia \abbrev{CL} 2038,},
+  origdate    = {1963},
+  series      = {Reissued, BMG/Sony},
+  number      = {770514},
+  year        = {1993},
+  type        = {\abbrev{CD}}
+}
+
 @music{morgan:cornbread,
   author      = {Morgan, Lee},
   title       = {Cornbread},
