--- a/diss.bib
+++ b/diss.bib
@@ -534,7 +534,7 @@ Theory} }
   title       = {Generic Sequences and the Generic \emph{Tonnetz}},
   journal     = {Oxford Handbooks Online},
   year        = {2014},
-  url         = "http://www.oxfordhandbooks.com/view/10.1093/oxfordhb/" 
+  url         = "http://www.oxfordhandbooks.com/view/10.1093/oxfordhb/"
               # "9780199935321.001.0001/oxfordhb-9780199935321-e-003"
 }
 
@@ -989,6 +989,15 @@ Theory} }
   translator  = {Oster, Ernst}
 }
 
+@book{sickler:fakebook,
+  author      = {Cardenas, Steve},
+  editor      = {Sickler, Don},
+  title       = {Thelonious Monk Fake Book},
+  address     = {Milwaukee},
+  publisher   = {Hal Leonard},
+  year        = {2002}
+}
+
 @article{straus:2003,
   author      = {Straus, Joseph},
   title       = {Uniformity, Balance, and Smoothness in Atonal Voice
@@ -1180,4 +1189,12 @@ Theory} }
   number      = {3},
   month       = aug,
   year        = {2010}
+}
+
+@video{zwerin:monk,
+  author      = {Zwerin, Charlotte},
+  title       = {Thelonious Monk: Straight No Chaser},
+  type        = {VHS},
+  publisher   = {Warner Bros.},
+  year        = {1988}
 }
