--- a/footnotes/ch5-notes.tex
+++ b/footnotes/ch5-notes.tex
@@ -71,6 +71,18 @@
   ``knowing the changes,'' since to really know Rhythm changes involves knowing
   about the wide variety of harmonic possibilities that defines the genre.}
 
+\fntext{ran-1}{%
+  The second volume of the old \emph{Real Book} does give changes during the
+  head, but they are somewhat inaccurate; in any case, it also includes the
+  indication to ``solo over Rhythm changes.''}
+
+\fntext{ran-2}{%
+  Again, this is a common occurrence for Monk. During particularly good solos,
+  he would rise from the piano and dance around the stage \parentext{an aspect
+    of his performance on display throughout Charlotte Zwerin's documentary of
+    Monk, \headlesscite{zwerin:monk}}. In the live recording here, he can
+  occasionally be heard shouting words of encouragement to Griffin. }
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../diss"
