Initial text on Griffin's Rhythm-a-ning solo.

--- a/diss.bib
+++ b/diss.bib
@@ -990,12 +990,12 @@ Theory} }
 }
 
 @book{sickler:fakebook,
-  author      = {Cardenas, Steve},
   editor      = {Sickler, Don},
   title       = {Thelonious Monk Fake Book},
   address     = {Milwaukee},
   publisher   = {Hal Leonard},
-  year        = {2002}
+  year        = {2002},
+  note        = {Steve Cardenas, transcriber}
 }
 
 @article{straus:2003,
