Add examples/more text on Griffin's solo.

--- a/footnotes/ch5-notes.tex
+++ b/footnotes/ch5-notes.tex
@@ -73,7 +73,7 @@
 
 \fntext{ran-1}{%
   The second volume of the old \emph{Real Book} does give changes during the
-  head, but they are somewhat inaccurate; in any case, it also includes the
+  A sections, but they are somewhat inaccurate; in any case, it also includes the
   indication to ``solo over Rhythm changes.''}
 
 \fntext{ran-2}{%
